# test-pr-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py
app/: config.py  dependencies.py  logger.py  main.py
app/api/: __init__.py  books.py
app/core/: database.py  models.py
app/models/: book.py  import_export.py  metadata.py  response.py
app/services/: book_service.py  metadata_service.py
app/utils/: csv_export.py  json_import.py  logger.py
tests/: conftest.py  test_books_api.py
